--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
+    
     compile group: 'org.hibernate', name: 'hibernate-gradle-plugin', version: '5.3.2.Final'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
 
